// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders <AppLayout/> with children 1`] = `
<div
  className="layout"
>
  <Head>
    <meta
      content="IE=edge"
      httpEquiv="X-UA-Compatible"
    />
    <meta
      content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"
      name="viewport"
    />
    <meta
      content="Description"
      name="description"
    />
    <meta
      content="Keywords"
      name="keywords"
    />
    <title>
      givngo
    </title>
    <link
      href="/manifest.json"
      rel="manifest"
    />
    <link
      href="/favicon-16x16.png"
      rel="icon"
      sizes="16x16"
      type="image/png"
    />
    <link
      href="/favicon-32x32.png"
      rel="icon"
      sizes="32x32"
      type="image/png"
    />
    <link
      href="/apple-touch-icon.png"
      rel="apple-touch-icon"
    />
    <meta
      content="#317EFB"
      name="theme-color"
    />
  </Head>
  <HeaderNav>
    <div>
      Child
    </div>
    <div>
      <span>
        Child
      </span>
      <p>
        Child
      </p>
    </div>
  </HeaderNav>
  <div>
    Child
  </div>
  <div>
    <span>
      Child
    </span>
    <p>
      Child
    </p>
  </div>
</div>
`;

exports[`renders <AppLayout/> with one child 1`] = `
<div
  className="layout"
>
  <Head>
    <meta
      content="IE=edge"
      httpEquiv="X-UA-Compatible"
    />
    <meta
      content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"
      name="viewport"
    />
    <meta
      content="Description"
      name="description"
    />
    <meta
      content="Keywords"
      name="keywords"
    />
    <title>
      givngo
    </title>
    <link
      href="/manifest.json"
      rel="manifest"
    />
    <link
      href="/favicon-16x16.png"
      rel="icon"
      sizes="16x16"
      type="image/png"
    />
    <link
      href="/favicon-32x32.png"
      rel="icon"
      sizes="32x32"
      type="image/png"
    />
    <link
      href="/apple-touch-icon.png"
      rel="apple-touch-icon"
    />
    <meta
      content="#317EFB"
      name="theme-color"
    />
  </Head>
  <HeaderNav>
    <div>
      Child 1
    </div>
  </HeaderNav>
  <div>
    Child 1
  </div>
</div>
`;

exports[`renders empty <AppLayout/> 1`] = `
<div
  className="layout"
>
  <Head>
    <meta
      content="IE=edge"
      httpEquiv="X-UA-Compatible"
    />
    <meta
      content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"
      name="viewport"
    />
    <meta
      content="Description"
      name="description"
    />
    <meta
      content="Keywords"
      name="keywords"
    />
    <title>
      givngo
    </title>
    <link
      href="/manifest.json"
      rel="manifest"
    />
    <link
      href="/favicon-16x16.png"
      rel="icon"
      sizes="16x16"
      type="image/png"
    />
    <link
      href="/favicon-32x32.png"
      rel="icon"
      sizes="32x32"
      type="image/png"
    />
    <link
      href="/apple-touch-icon.png"
      rel="apple-touch-icon"
    />
    <meta
      content="#317EFB"
      name="theme-color"
    />
  </Head>
  <HeaderNav />
</div>
`;
